[gd_scene load_steps=2 format=3 uid="uid://fclm74fq0hf2"]

[ext_resource type="Script" path="res://Scripts/ShopItemTab.gd" id="1_38y33"]

[node name="ShopItemTab" type="Node2D"]
script = ExtResource("1_38y33")

[node name="ShopItemTabShape" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(112, 0, 112, 32, 112, 64, 16, 64, 0, 48, 0, 16, 16, 0)

[node name="ShopItemTabLabel" type="Label" parent="."]
offset_right = 112.0
offset_bottom = 64.0
text = "Buildings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopItemTabControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 112.0
offset_bottom = 64.0

[connection signal="gui_input" from="ShopItemTabControl" to="." method="_on_shop_item_tab_control_gui_input"]
